--- a/lesson2/lesson2_1.ipynb
+++ b/lesson2/lesson2_1.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! Python!\n"
+      "Hello Python\n"
      ]
     }
    ],
    "source": [
-    "print('Hello! Python!!')"
+    "print(\"Hello Python\")"
    ]
   }
  ],
@@ -34,7 +34,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
