--- a/lesson2/lesson2_1.ipynb
+++ b/lesson2/lesson2_1.ipynb
@@ -16,6 +16,53 @@
    "source": [
     "print(\"Hello Python\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello1\n",
+      "Hello2\n",
+      "Hello3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello1\")\n",
+    "print(\"Hello2\")\n",
+    "print(\"Hello3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "未成年\n",
+      "不可以考駕照\n",
+      "應用程式結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 16\n",
+    "if age<=18:\n",
+    "    print(\"未成年\")\n",
+    "    print(\"不可以考駕照\")\n",
+    "else:\n",
+    "    print(\"已成年\")\n",
+    "    print(\"可以考駕照\")\n",
+    "print(\"應用程式結束\")"
+   ]
   }
  ],
  "metadata": {
