--- a/lesson2/lesson2_1.ipynb
+++ b/lesson2/lesson2_1.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -28,14 +28,16 @@
      "text": [
       "Hello1\n",
       "Hello2\n",
-      "Hello3\n"
+      "Hello3\n",
+      "Hello4\n"
      ]
     }
    ],
    "source": [
     "print(\"Hello1\")\n",
     "print(\"Hello2\")\n",
-    "print(\"Hello3\")"
+    "print(\"Hello3\")\n",
+    "print(\"Hello4\")"
    ]
   },
   {
