--- a/lesson2/lesson2_2.ipynb
+++ b/lesson2/lesson2_2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "262.5\n"
+      "300\n"
      ]
     }
    ],
@@ -21,8 +21,10 @@
     "scores=int(input('請輸入學生分數(最高300分):'))\n",
     "is_add=input('學生是否符合加分條件?(y,n)')\n",
     "\n",
-    "if is_add == 'y':\n",
-    "    scores *= 1.05\n",
+    "if is_add=='y':\n",
+    "    scores*=1.05\n",
+    "    if scores>300:\n",
+    "        scores=300\n",
     "    pass #[關鍵字]先不做任何事\n",
     "\n",
     "print(scores)"
