--- a/lesson2/lesson2_1.ipynb
+++ b/lesson2/lesson2_1.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 09:00~12:00 https://www.youtube.com/watch?v=pkqEh1lFz4g"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
