--- a/lesson2/lesson2_2.ipynb
+++ b/lesson2/lesson2_2.ipynb
@@ -1,14 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 13:30~46:30 https://www.youtube.com/watch?v=Hng8m3g-tL4\n",
+    "* 講義 https://github.com/roberthsu2003/python/tree/master/%E6%A2%9D%E4%BB%B6%E5%88%86%E6%9E%90"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "304.5\n",
+      "300\n",
       "300\n"
      ]
     }
@@ -23,11 +33,47 @@
     "\n",
     "if is_add=='y':\n",
     "    scores*=1.05\n",
+    "    print(scores)\n",
     "    if scores>300:\n",
     "        scores=300\n",
     "    pass #[關鍵字]先不做任何事\n",
     "\n",
-    "print(scores)"
+    "print(scores)\n",
+    "print(round(scores))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "304.5\n",
+      "300\n",
+      "300\n"
+     ]
+    }
+   ],
+   "source": [
+    "#學生總分為300\n",
+    "#有些學生可以加分5%\n",
+    "#如果加分超過300,就以300分為準\n",
+    "\n",
+    "scores=int(input('請輸入學生分數(最高300分):'))\n",
+    "is_add=input('學生是否符合加分條件?(y,n)')\n",
+    "\n",
+    "if is_add=='y':\n",
+    "    scores*=1.05\n",
+    "    print(scores)\n",
+    "    if scores>300:\n",
+    "        scores=300\n",
+    "    pass #[關鍵字]先不做任何事\n",
+    "\n",
+    "print(scores)\n",
+    "print(round(scores))"
    ]
   }
  ],
