--- a/lesson2/lesson2_2.ipynb
+++ b/lesson2/lesson2_2.ipynb
@@ -43,17 +43,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### raise錯誤  \n",
+    "* 當使用者輸入的內容有錯"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "304.5\n",
-      "300\n",
-      "300\n"
+      "格式錯誤\n",
+      "應用程式結束\n"
      ]
     }
    ],
@@ -62,18 +69,22 @@
     "#有些學生可以加分5%\n",
     "#如果加分超過300,就以300分為準\n",
     "\n",
-    "scores=int(input('請輸入學生分數(最高300分):'))\n",
-    "is_add=input('學生是否符合加分條件?(y,n)')\n",
+    "try:\n",
+    "    scores=int(input('請輸入學生分數(最高300分):'))\n",
+    "    is_add=input('學生是否符合加分條件?(y,n)')\n",
+    "    if is_add=='y':\n",
+    "        scores*=1.05\n",
+    "        print(scores)\n",
+    "        if scores>300:\n",
+    "            scores=300\n",
+    "        pass #[關鍵字]先不做任何事\n",
     "\n",
-    "if is_add=='y':\n",
-    "    scores*=1.05\n",
     "    print(scores)\n",
-    "    if scores>300:\n",
-    "        scores=300\n",
-    "    pass #[關鍵字]先不做任何事\n",
+    "    print(round(scores))\n",
+    "except ValueError:\n",
+    "    print('格式錯誤')\n",
     "\n",
-    "print(scores)\n",
-    "print(round(scores))"
+    "print('應用程式結束')"
    ]
   }
  ],
