--- a/lesson2/lesson2_2.ipynb
+++ b/lesson2/lesson2_2.ipynb
@@ -46,20 +46,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### raise錯誤  \n",
+    "**raise錯誤處理**\n",
     "* 當使用者輸入的內容有錯"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "格式錯誤\n",
+      "262.5\n",
+      "學生分數是:262.5分\n",
+      "262\n",
       "應用程式結束\n"
      ]
     }
@@ -82,7 +84,101 @@
     "    print(scores)\n",
     "    print(round(scores))\n",
     "except ValueError:\n",
-    "    print('格式錯誤')\n",
+    "    print('分數格式錯誤')\n",
+    "except NameError:\n",
+    "    print('加分選項錯誤')\n",
+    "except Exception:\n",
+    "    print('發生預期外的錯誤')\n",
+    "\n",
+    "print('應用程式結束')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* try+else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n",
+      "應用程式結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "#學生總分為300\n",
+    "#有些學生可以加分5%\n",
+    "#如果加分超過300,就以300分為準\n",
+    "\n",
+    "try:\n",
+    "    scores=int(input('請輸入學生分數(最高300分):'))\n",
+    "    is_add=input('學生是否符合加分條件?(y,n)')\n",
+    "except Exception:\n",
+    "    print('發生錯誤')\n",
+    "else:\n",
+    "    if is_add=='y':\n",
+    "        scores*=1.05\n",
+    "        print(scores)\n",
+    "        if scores>300:\n",
+    "            scores=300\n",
+    "        pass #[關鍵字]先不做任何事\n",
+    "    print(scores)\n",
+    "    print(round(scores))\n",
+    "\n",
+    "print('應用程式結束')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 字串差補:  \n",
+    "f\"xxxxxx{變數}x\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "加分後學生分數是:262.5分\n",
+      "四捨五入後分數為:262分\n",
+      "應用程式結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "#學生總分為300\n",
+    "#有些學生可以加分5%\n",
+    "#如果加分超過300,就以300分為準\n",
+    "\n",
+    "try:\n",
+    "    scores=int(input('請輸入學生分數(最高300分):'))\n",
+    "    is_add=input('學生是否符合加分條件?(y,n)')\n",
+    "except Exception:\n",
+    "    print('發生錯誤')\n",
+    "else:\n",
+    "    if is_add=='y':\n",
+    "        scores*=1.05\n",
+    "        print(\"加分後學生分數是:\" + str(scores) + \"分\")\n",
+    "        if scores>300:\n",
+    "            scores=300\n",
+    "        pass #[關鍵字]先不做任何事\n",
+    "    print(f\"四捨五入後分數為:{round(scores)}分\")\n",
     "\n",
     "print('應用程式結束')"
    ]
