--- a/lesson2/lesson2_2.ipynb
+++ b/lesson2/lesson2_2.ipynb
@@ -182,6 +182,30 @@
     "\n",
     "print('應用程式結束')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "特優\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores=int(input('請輸入學生分數'))\n",
+    "if scores >= 90:\n",
+    "    print('特優')\n",
+    "else:\n",
+    "    if scores >= 60:\n",
+    "        print('及格')\n",
+    "    else:\n",
+    "        print('不及格')"
+   ]
   }
  ],
  "metadata": {
