--- a/lesson2/lesson2_2.ipynb
+++ b/lesson2/lesson2_2.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -200,11 +200,37 @@
     "scores=int(input('請輸入學生分數'))\n",
     "if scores >= 90:\n",
     "    print('特優')\n",
+    "elif scores >= 60:\n",
+    "    print('及格')\n",
     "else:\n",
-    "    if scores >= 60:\n",
-    "        print('及格')\n",
-    "    else:\n",
-    "        print('不及格')"
+    "    print('不及格')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "丁\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores=int(input('請輸入學生分數'))\n",
+    "if scores >= 90:\n",
+    "    print('優')\n",
+    "elif scores >= 80:\n",
+    "    print('甲')\n",
+    "elif scores >= 70:\n",
+    "    print('乙')\n",
+    "elif scores >= 60:\n",
+    "    print('丙')\n",
+    "else:\n",
+    "    print('丁')"
    ]
   }
  ],
