--- a/lesson2/lesson2_2.ipynb
+++ b/lesson2/lesson2_2.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -220,6 +220,12 @@
     }
    ],
    "source": [
+    "# 90(含)~100分為「優」\n",
+    "# 80(含)~89分為「甲」\n",
+    "# 70(含)~79分為「乙」\n",
+    "# 60(含)~69分為「丙」\n",
+    "# 0(含)~59分為「丁」\n",
+    "\n",
     "scores=int(input('請輸入學生分數'))\n",
     "if scores >= 90:\n",
     "    print('優')\n",
@@ -231,6 +237,41 @@
     "    print('丙')\n",
     "else:\n",
     "    print('丁')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "獎金:0元\n"
+     ]
+    }
+   ],
+   "source": [
+    "#巢狀判斷\n",
+    "#國文100分,同時數學100分,獎金1000\n",
+    "#國文100分,或者數學100分,獎金500\n",
+    "#不然0\n",
+    "\n",
+    "chinese = int(input(\"請輸入國文分數\"))\n",
+    "math = int(input(\"請輸入數學分數\"))\n",
+    "\n",
+    "if chinese == 100:\n",
+    "    if math == 100:\n",
+    "        bonus = 1000\n",
+    "    else:\n",
+    "        bonus = 500\n",
+    "elif math == 100:\n",
+    "    bonus = 500\n",
+    "else: \n",
+    "    bonus = 0\n",
+    "\n",
+    "print(f\"獎金:{bonus}元\")"
    ]
   }
  ],
