--- a/lesson2/lesson2_2.ipynb
+++ b/lesson2/lesson2_2.ipynb
@@ -240,6 +240,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 2個條件巢狀判斷"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -269,6 +276,45 @@
     "elif math == 100:\n",
     "    bonus = 500\n",
     "else: \n",
+    "    bonus = 0\n",
+    "\n",
+    "print(f\"獎金:{bonus}元\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 2個條件邏輯運算子"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "獎金:0元\n"
+     ]
+    }
+   ],
+   "source": [
+    "#巢狀判斷\n",
+    "#國文100分,同時數學100分,獎金1000\n",
+    "#國文100分,或者數學100分,獎金500\n",
+    "#不然0\n",
+    "\n",
+    "chinese = int(input(\"請輸入國文分數\"))\n",
+    "math = int(input(\"請輸入數學分數\"))\n",
+    "\n",
+    "if chinese == 100 and math == 100:\n",
+    "    bonus = 1000\n",
+    "elif chinese == 100 or math == 100:\n",
+    "    bonus = 500\n",
+    "else:\n",
     "    bonus = 0\n",
     "\n",
     "print(f\"獎金:{bonus}元\")"
