--- a/lesson3/lesson3_1.ipynb
+++ b/lesson3/lesson3_1.ipynb
@@ -32,8 +32,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://docs.python.org/zh-tw/3/library/functions.html#func-range"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -48,12 +55,13 @@
     }
    ],
    "source": [
+    "# class range(stop)\n",
     "list(range(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -68,6 +76,7 @@
     }
    ],
    "source": [
+    "# class range(start, stop, step=1)\n",
     "list(range(1, 10))"
    ]
   },
@@ -116,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -124,8 +133,7 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "5\n",
-      "10\n"
+      "6\n"
      ]
     }
    ],
@@ -134,6 +142,38 @@
     "while i<=10:\n",
     "    print(i)\n",
     "    i += int(input(\"請輸入數值\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        value = int(input(\"請輸入數字\"))\n",
+    "        again = input(\"您還要繼續嗎?(y,n)\")\n",
+    "        if again == \"n\":\n",
+    "            break\n",
+    "    except Exception:\n",
+    "        print(\"格式錯誤，請重新輸入\")\n",
+    "        continue\n",
+    "\n",
+    "for index in range(1, value + 1):\n",
+    "    print(index)"
    ]
   }
  ],
@@ -153,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
