--- a/lesson3/lesson3_2.ipynb
+++ b/lesson3/lesson3_2.ipynb
@@ -19,7 +19,17 @@
      "output_type": "stream",
      "text": [
       "-*-*-*-*-*-*-*-*-*-*-*猜數字遊戲-*-*-*-*-*-*-*-*-*-*-*\n",
-      "\n"
+      "\n",
+      "再小一點\n",
+      "你猜了1次\n",
+      "再大一點\n",
+      "你猜了2次\n",
+      "再大一點\n",
+      "你猜了3次\n",
+      "再大一點\n",
+      "你猜了4次\n",
+      "你答對了!答案是:45\n",
+      "應用程式結束\n"
      ]
     }
    ],
@@ -43,7 +53,7 @@
     "            print(\"再小一點\")\n",
     "        elif keyin < target:\n",
     "            min = keyin + 1\n",
-    "            print(\"再小一點\")\n",
+    "            print(\"再大一點\")\n",
     "\n",
     "        print(f\"你猜了{count}次\")\n",
     "        # continue (可寫可不寫)\n",
@@ -51,6 +61,7 @@
     "        print(\"輸入範圍有誤\")\n",
     "        # continue (可寫可不寫)\n",
     "\n",
+    "print(f\"你猜了{count}次\")\n",
     "print('應用程式結束')"
    ]
   }
