--- a/lesson3/lesson3_2.ipynb
+++ b/lesson3/lesson3_2.ipynb
@@ -11,24 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-*-*-*-*-*-*-*-*-*-*-*猜數字遊戲-*-*-*-*-*-*-*-*-*-*-*\n",
+      "=============猜數字遊戲=============\n",
       "\n",
+      "再大一點\n",
+      "再大一點\n",
       "再小一點\n",
-      "你猜了1次\n",
-      "再大一點\n",
-      "你猜了2次\n",
-      "再大一點\n",
-      "你猜了3次\n",
-      "再大一點\n",
-      "你猜了4次\n",
-      "你答對了!答案是:45\n",
+      "再小一點\n",
+      "你答對了!答案是:78\n",
+      "你猜了5次\n",
       "應用程式結束\n"
      ]
     }
@@ -39,7 +36,7 @@
     "max = 100\n",
     "target = random.randint(min,max)\n",
     "count = 0\n",
-    "print(\"-*-*-*-*-*-*-*-*-*-*-*猜數字遊戲-*-*-*-*-*-*-*-*-*-*-*\\n\")\n",
+    "print(\"=============猜數字遊戲=============\\n\")\n",
     "\n",
     "while True:\n",
     "    keyin = int(input(f\"猜數字範圍{min}~{max}:\"))\n",
@@ -55,7 +52,6 @@
     "            min = keyin + 1\n",
     "            print(\"再大一點\")\n",
     "\n",
-    "        print(f\"你猜了{count}次\")\n",
     "        # continue (可寫可不寫)\n",
     "    else:\n",
     "        print(\"輸入範圍有誤\")\n",
