--- a/lesson3/lesson3_4.ipynb
+++ b/lesson3/lesson3_4.ipynb
@@ -82,6 +82,85 @@
     "\n",
     "menu('白酒',dessert='蛋糕',entree='牛排')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "酒類:白酒\n",
+      "主餐:牛排\n",
+      "點心:奶昔\n",
+      "=========\n",
+      "酒類:白酒\n",
+      "主餐:牛排\n",
+      "點心:蛋糕\n"
+     ]
+    }
+   ],
+   "source": [
+    "#指定預設參數的值\n",
+    "def menu(wine:str, entree:str, dessert:str='奶昔'):\n",
+    "    print(f'酒類:{wine}')\n",
+    "    print(f'主餐:{entree}')\n",
+    "    print(f'點心:{dessert}')\n",
+    "\n",
+    "menu('白酒','牛排')\n",
+    "print(\"=========\")\n",
+    "menu('白酒','牛排',dessert='蛋糕')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n",
+      "(1, 2, 3, 'a', 'b', 'c', 3.5, 9.8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#沒有限定數量的引數值呼叫\n",
+    "def print_args(*args):\n",
+    "    print(args)\n",
+    "\n",
+    "print_args()\n",
+    "print_args(1, 2, 3, 'a', 'b', 'c', 3.5, 9.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'one': 1, 'two': 2, 'three': 3}\n",
+      "============\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#沒有限定數量的引數名稱呼叫\n",
+    "def print_kwargs(**kwargs):\n",
+    "    print(kwargs)\n",
+    "\n",
+    "print_kwargs(one=1,two=2,three=3)\n",
+    "print(\"============\")\n",
+    "print_kwargs()"
+   ]
   }
  ],
  "metadata": {
