--- a/lesson3/lesson3_4.ipynb
+++ b/lesson3/lesson3_4.ipynb
@@ -161,6 +161,48 @@
     "print(\"============\")\n",
     "print_kwargs()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==============\n",
+      "\n",
+      "\n",
+      "\n",
+      "==============\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"==============\")\n",
+    "print()\n",
+    "print()\n",
+    "print()\n",
+    "print(\"==============\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-2-3-4-a-b-c.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1, 2, 3, 4, 'a', 'b', 'c',end='.\\n',sep='-')"
+   ]
   }
  ],
  "metadata": {
