--- a/lesson4/lesson4_3.ipynb
+++ b/lesson4/lesson4_3.ipynb
@@ -2,54 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Person:\n",
     "    def __init__(self,name:str,age:int):\n",
-    "        self.name = name\n",
-    "        self.age = age"
+    "        self.name = name #attribute\n",
+    "        self.age = age #attribute\n",
+    "\n",
+    "    #實體方法(instance method)\n",
+    "    def echo(self):\n",
+    "        print(f'我的姓名是:{self.name}')\n",
+    "        print(f'我的age是:{self.age}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "徐國堂\n",
-      "35\n"
+      "我的姓名是:徐國堂\n",
+      "我的age是:35\n"
      ]
     }
    ],
    "source": [
     "p1 = Person('徐國堂',age=35)\n",
-    "print(p1.name)\n",
-    "print(p1.age)"
+    "p1.echo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "robert\n",
-      "34\n"
+      "我的姓名是:robert\n",
+      "我的age是:34\n"
      ]
     }
    ],
    "source": [
     "p2 = Person(age=34,name='robert')\n",
-    "print(p2.name)\n",
-    "print(p2.age)"
+    "p2.echo()"
    ]
   }
  ],
