--- a/lesson4/lesson4_4.ipynb
+++ b/lesson4/lesson4_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,38 +19,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "我的姓名是:徐國堂\n",
-      "我的age是:35\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "p1 = Person('徐國堂',age=35).echo()"
+    "class Student(Person):\n",
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "我的姓名是:robert\n",
-      "我的age是:34\n"
+      "我的姓名是:小張\n",
+      "我的age是:17\n"
      ]
     }
    ],
    "source": [
-    "p2 = Person(age=34,name='robert').echo()"
+    "s1:Student = Student('小張',age=17).echo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "我的姓名是:小王\n",
+      "我的age是:18\n"
+     ]
+    }
+   ],
+   "source": [
+    "s2:Student = Student('小王',age=18).echo()"
    ]
   }
  ],
@@ -70,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
