--- a/lesson4/lesson4_4.ipynb
+++ b/lesson4/lesson4_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,17 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Student(Person):\n",
-    "    pass"
+    "    def __init__(self,name:str,age:int,score:int):\n",
+    "        super().__init__(name=name,age=age)\n",
+    "        self.score = score\n",
+    "\n",
+    "    def echo(self):\n",
+    "        super().echo()\n",
+    "        print(f'我的score是:{self.score}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -37,17 +43,19 @@
      "output_type": "stream",
      "text": [
       "我的姓名是:小張\n",
-      "我的age是:17\n"
+      "我的age是:17\n",
+      "我的score是:245\n"
      ]
     }
    ],
    "source": [
-    "s1:Student = Student('小張',age=17).echo()"
+    "s1:Student = Student('小張',age=17,score=245)\n",
+    "s1.echo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -55,12 +63,14 @@
      "output_type": "stream",
      "text": [
       "我的姓名是:小王\n",
-      "我的age是:18\n"
+      "我的age是:18\n",
+      "我的score是:280\n"
      ]
     }
    ],
    "source": [
-    "s2:Student = Student('小王',age=18).echo()"
+    "s2:Student = Student('小王',age=18,score=280)\n",
+    "s2.echo()"
    ]
   }
  ],
@@ -80,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
