--- a/lesson4/lesson4_4.ipynb
+++ b/lesson4/lesson4_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -49,13 +49,12 @@
     }
    ],
    "source": [
-    "s1:Student = Student('小張',age=17,score=245)\n",
-    "s1.echo()"
+    "s1:Student = Student('小張',age=17,score=245).echo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -69,8 +68,7 @@
     }
    ],
    "source": [
-    "s2:Student = Student('小王',age=18,score=280)\n",
-    "s2.echo()"
+    "s2:Student = Student('小王',age=18,score=280).echo()"
    ]
   }
  ],
