--- a/lesson4/lesson4_4.ipynb
+++ b/lesson4/lesson4_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,14 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Student(Person):\n",
     "    def __init__(self,name:str,age:int,score:int):\n",
     "        super().__init__(name=name,age=age)\n",
-    "        self.score = score\n",
+    "        self.__score = score\n",
+    "\n",
+    "    @property\n",
+    "    def score(self)->int:\n",
+    "        return self.__score\n",
     "\n",
     "    def echo(self):\n",
     "        super().echo()\n",
@@ -35,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -49,12 +53,14 @@
     }
    ],
    "source": [
-    "s1:Student = Student('小張',age=17,score=245).echo()"
+    "s1:Student = Student('小張',age=17,score=245)\n",
+    "s1.score\n",
+    "s1.echo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +74,8 @@
     }
    ],
    "source": [
-    "s2:Student = Student('小王',age=18,score=280).echo()"
+    "s2:Student = Student('小王',age=18,score=280)\n",
+    "s2.echo()"
    ]
   }
  ],
