--- a/lesson5/lesson5_0.ipynb
+++ b/lesson5/lesson5_0.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "您的BMI是:17.72\n",
+      "您的體重是:50.0\n",
+      "您的BMI指數:體重過輕\n"
+     ]
+    }
+   ],
    "source": [
     "class BMI:\n",
     "    def __init__(self,name:str,height:float,weight:float):\n",
@@ -64,8 +74,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
