--- a/lesson5/lesson5_3.ipynb
+++ b/lesson5/lesson5_3.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Banana\n",
-      "10\n",
+      "Cherry\n",
+      "30\n",
       "=============\n",
       "Apple\n",
       "20\n",
       "=============\n",
-      "Cherry\n",
-      "30\n",
+      "Banana\n",
+      "10\n",
       "=============\n"
      ]
     }
@@ -32,10 +32,10 @@
     "        Item(\"Banana\",10),\n",
     "        Item(\"Cherry\",30)]\n",
     "\n",
-    "def abc(x:Item)->int:\n",
-    "    return x.price\n",
+    "#def abc(x:Item)->int:\n",
+    "#    return x.price\n",
     "\n",
-    "newItems = sorted(items,key=abc)\n",
+    "newItems = sorted(items,key=lambda x:x.price,reverse=True)\n",
     "for item in newItems:\n",
     "    print(item.name)\n",
     "    print(item.price)\n",
