--- a/lesson5/lesson5_3.ipynb
+++ b/lesson5/lesson5_3.ipynb
@@ -2,32 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cherry\n",
-      "30\n",
-      "=============\n",
-      "Apple\n",
-      "20\n",
-      "=============\n",
-      "Banana\n",
-      "10\n",
-      "=============\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Item:\n",
     "    def __init__(self, name:str, price:int):\n",
     "        self.name = name\n",
     "        self.price = price\n",
     "\n",
-    "items = [\n",
+    "items:list[Item] = [\n",
     "        Item(\"Apple\",20),\n",
     "        Item(\"Banana\",10),\n",
     "        Item(\"Cherry\",30)]\n",
@@ -40,6 +24,42 @@
     "    print(item.name)\n",
     "    print(item.price)\n",
     "    print(\"=============\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items:list[dict] = [\n",
+    "    {\"name\":\"Apple\",\"price\":20},\n",
+    "    {\"name\":\"Banana\",\"price\":10},\n",
+    "    {\"name\":\"Cherry\",\"price\":30}\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Apple', 20)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item:dict= {\"name\":\"Apple\",\n",
+    "            \"price\":20}\n",
+    "\n",
+    "item['name'], item['price']"
    ]
   }
  ],
