--- a/lesson5/lesson5_4.ipynb
+++ b/lesson5/lesson5_4.ipynb
@@ -26,6 +26,109 @@
     "]\n",
     "sorted(items,key=lambda x:x['price'],reverse=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('robert', 35, 180, 80)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name, age, height, weight = 'robert', 35, 180, 80\n",
+    "name, age, height, weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "price\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in {\"name\":\"Apple\",\"price\":20}:\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "price\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in {\"name\":\"Apple\",\"price\":20}.keys():\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in {\"name\": \"Apple\", \"price\": 20}.values():\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "Apple\n",
+      "========\n",
+      "price\n",
+      "20\n",
+      "========\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key,value in {\"name\": \"Apple\", \"price\": 20}.items():\n",
+    "    print(key)\n",
+    "    print(value)\n",
+    "    print(\"========\")"
+   ]
   }
  ],
  "metadata": {
