--- a/lesson8/lesson8_4.ipynb
+++ b/lesson8/lesson8_4.ipynb
@@ -23,7 +23,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tools import fetch_youbike_data\n",
+    "from pprint import pprint\n",
+    "youbike_data:list[dict] = fetch_youbike_data()\n",
+    "\n",
+    "area_list=list(set(map(lambda value:value['sarea'],youbike_data)))\n",
+    "area_list"
+   ]
   }
  ],
  "metadata": {
